--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,2 @@
-<p-table [value]="products" responsiveLayout="scroll">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Code</th>
-      <th>Name</th>
-      <th>Category</th>
-      <th>Quantity</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-product>
-    <tr>
-      <td>{{product.code}}</td>
-      <td>{{product.name}}</td>
-      <td>{{product.category}}</td>
-      <td>{{product.quantity}}</td>
-    </tr>
-  </ng-template>
-</p-table>
+<app-header></app-header>
+<app-table></app-table>
