--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
-//@import '~primeicons/primeicons.css';
+body {
+  --text-color: #222;
+  --bkg-color: #fff;
+  --btn-txt-color: white;
+  --btn-bg-color: rgb(11, 88, 160);
+}
+
+body.dark{
+  --text-color: #eee;
+  --bkg-color: #252222;
+  --btn-txt-color: rgb(46, 43, 43);
+  --btn-bg-color: rgb(20, 211, 195);
+}
+
+body {
+  background: var(--bkg-color);
+}
+
+app-table .ng-star-inserted{
+  background:  var(--bkg-color);
+}
+app-header .p-card-body{
+  background:  var(--bkg-color);
+}
+app-table  {
+  background:  var(--bkg-color);
+}
+
+h1,
+p {
+  color: var(--text-color);
+}
+button {
+  padding: 10px;
+  border: none;
+  border-radius: 2px;
+  color: var(--btn-txt-color);
+  background-color: var(--btn-bg-color);
+}
+
